generating webview for SMVBlog on launch - faster displaying made setup assistant optional